<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeight"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:cardMaxElevation="15dp"
            app:layout_constraintBottom_toTopOf="@id/cvHeight"
            app:layout_constraintEnd_toStartOf="@id/tvKg"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075">

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="@string/peso"
                android:hint="@string/peso"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="32sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/kg"
            android:textStyle="bold"
            android:textColor="@color/color_textHint"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/cvWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvWeight" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHeight"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="15dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="@+id/cvWeight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cvWeight"
            app:layout_constraintTop_toBottomOf="@id/cvWeight">

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="@string/altura_em_cm"
                android:hint="@string/altura"
                android:textStyle="bold"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:textColor="@color/color_textHint"
            android:textStyle="bold"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/cvHeight"
            app:layout_constraintEnd_toEndOf="@id/tvKg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvKg" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#505CA1"
            android:text="@string/calcular"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            android:elevation="15dp"
            app:layout_constraintEnd_toEndOf="@+id/tvCm"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintStart_toStartOf="@+id/cvHeight"
            app:layout_constraintTop_toBottomOf="@+id/cvHeight" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResult"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:cardMaxElevation="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnCalculate"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/btnCalculate"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate"
            app:layout_constraintVertical_bias="0.196">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/color_textHint"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvResultDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/color_textHint"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imc_ideal"
                    android:textAlignment="center"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/color_textHint"
                    android:textStyle="bold"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>